* touch: For the SVID versions, the first non-option argument is treated
  as a time specification if it starts with a digit, regardless of the
  following characters.
* join: If a join field does not exist, substitute the empty string for it.
* ed: With the SVID4 and POSIX versions, matches of zero length in substitute
  commands do no longer lead to endless loops.

Release 050206
* POSIX.1-2001 was added as another personality. Binaries are installed in
  /usr/5bin/posix2001 by default. mk.config files have to be augmented with
  the SU3BIN macro if they are to be reused.
  The POSIX.1-2001 personality still lacks some features for the 'file' and
  'pax' commands.
* find, ls: POSIX.1-2001 versions have been introduced.
* chown, chgrp: The -H, -L, and -P options from POSIX.1-2001 have been added.
  If changing the owner or group of a directory fails, chown and chgrp now
  continue to process the hierarchy below it with the -R option.
* cp: The -H, -L, and -P options from POSIX.1-2001 have been added.
* du, find: The -H and -L options from POSIX.1-2001 have been added.
* ls: The -H option from POSIX.1-2001 has been added.
* od: A leading '+' is not required to introduce an offset argument for the
  POSIX.1-2001 version. The SVID personalities also do no longer require it.
* pax: The -H option from POSIX.1-2001 has been added; pax does not follow
  symbolic links on the command line anymore unless this option is present.
* pax: The POSIX.1-2001 version terminates immediately when it detects a
  symbolic link loop with the -L option.
* tr: The -C option from POSIX.1-2001 has been added.
* dd: With 'conv=unblock', the last block was not converted.
* grep: The content of a file that consisted only of a single byte other than
  a newline was never matched.
* csplit, ed, expr, grep, nl, pax, pg, sed: The POSIX versions no longer
  accept reverted ranges like '[b-a]' in regular expressions.
* touch: If one of -a or -m but no time specification was given, both